-- =====================================================================
-- Duel Matrix スキーマ定義（H2 Database 用）
-- ---------------------------------------------------------------------
-- Spring Boot 起動時に spring.sql.init によって実行される．
-- 設計の正本は docs/assets/schema.sql（内容は同一）．
--
-- モデル: 勝者記録モデル
--   1 試合につき「勝者・敗者」を 1 レコードだけ登録する（勝った試合のみ）．
--   敗北・引き分けは登録しないため，result 列は持たない．
--
-- 移植性メモ:
--   BIGINT / VARCHAR / TIMESTAMP など標準的な型のみを使い，
--   将来 PostgreSQL へ移行してもほぼそのまま流用できる形にしている．
-- =====================================================================

-- 再起動・再実行に備えて既存テーブルを削除してから作り直す
DROP TABLE IF EXISTS matches;
DROP TABLE IF EXISTS archetypes;

-- アーキタイプ（デッキの種類）を保存するテーブル
CREATE TABLE archetypes (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL UNIQUE,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

-- 1 回の対戦記録（勝った試合）を保存するテーブル
CREATE TABLE matches (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    winner_archetype_id BIGINT NOT NULL,
    loser_archetype_id BIGINT NOT NULL,
    play_order VARCHAR(10) NOT NULL DEFAULT 'UNKNOWN', -- 勝者の先攻後攻: FIRST / SECOND / UNKNOWN
    memo VARCHAR(500),
    played_at TIMESTAMP NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_matches_winner
        FOREIGN KEY (winner_archetype_id) REFERENCES archetypes(id),
    CONSTRAINT fk_matches_loser
        FOREIGN KEY (loser_archetype_id) REFERENCES archetypes(id)
);

-- 履歴を新しい順に取り出しやすくするためのインデックス
CREATE INDEX idx_matches_played_at ON matches(played_at);

-- マトリクス計算時に「勝者×敗者」の組み合わせで集計しやすくするためのインデックス
CREATE INDEX idx_matches_pair ON matches(winner_archetype_id, loser_archetype_id);
